--- a/style.css
+++ b/style.css
@@ -1,3 +1,8 @@
+*
+{
+	margin: 0;
+	padding: 0;
+}
 header
 {
 	color: red;
@@ -7,6 +12,7 @@ header
 {
 	position: fixed;
 	background: black;
+	width: 100% !important;
 }
 
 main
