--- a/style.css
+++ b/style.css
@@ -5,36 +5,41 @@
 }
 header
 {
-	color: red;
 	text-align: left;
 }
+
 .navButtons
 {
-	position: absolute;
-	left: 50%;
-	transform: translate(-50%,-245%);
-}
-.nav .navButtons
-{
-	position: absolute;
-	top: 50%;
-	left: 50%;
-	transform: translate(-50%, -50%);
+	position: fixed;
+	padding-top:15px;
 }
 .navButtons a
 {
-	margin-left: 20px;
-	margin-right: 20px;
-	
 	color: white;
 	text-decoration: none;
 	display: inline-block;
 	font-size: 20px;
 	padding: 14px 34px;
-	background: #e74c3c;
 	font-family: calibri;
+	border-right: 3px solid #0000004d;
+}
+.navButtons a:hover
+{
+	text-decoration: underline;
+}
+.navigation h1
+{
 	text-align: center;
-	border-radius: 25px;
+	font-family: calibri;
+	font-size: 50px;
+	padding:10px;
+	color:#ffffff;
+	text-shadow: 2px 2px 2px #e0e0e0;
+}
+.navigation
+{
+	background: #604476;
+	width: 100% !important;
 }
 .nav
 {
