--- a/style.css
+++ b/style.css
@@ -9,11 +9,9 @@
 }
 header
 {
-	background: #AA8ED6;
 	width: 100% !important;
-	box-shadow: 0px 5px 5px #18181b;
-	position: relative;
 	text-align: left;
+	padding-bottom: 79px;
 }
 main
 {
@@ -138,16 +136,14 @@ footer a:hover
 	display: flex;
 	align-items: center;
 	justify-content: space-between;
-	padding: 14px 20px;
+	/* padding: 14px 20px; */
 	margin: auto;
 	width: 100% !important;
-}
-.navigation.nav
-{
-	position: fixed;
-	z-index: 10;
-	box-shadow: 0px 5px 5px #18181b;
-	padding: 19.5px 20px;/* important to compansate the icon */
+	
+		position: fixed;
+		z-index: 10;
+		box-shadow: 0px 5px 5px #18181b;
+		padding: 19.5px 20px;/* important to compansate the icon */
 }
 
 
@@ -216,7 +212,7 @@ footer a:hover
 {
 	
 	background: #232428;
-	max-width: 920px;
+	max-width: 750px;
 	margin: 0 auto;
 	
 	/* margin-left : 10%; */
