--- a/style.css
+++ b/style.css
@@ -213,6 +213,7 @@ footer a:hover
 	
 	background: #232428;
 	max-width: 750px;
+	min-width: 425px;
 	margin: 0 auto;
 	
 	/* margin-left : 10%; */
@@ -223,13 +224,17 @@ footer a:hover
 }
 .projectTitle
 {
+	color: #f3edd6;
 	font-size: 30px;
 	text-align: center;
+
+	transition: .2s linear;
 } 
-.projectBlock img
+
+.projectTitle:hover
 {
-	margin-top: 25px;
-}
+	transform: scale(1.1);
+} 
 
 /* ----------------------------------------------------------------------- */
 
@@ -362,4 +367,103 @@ footer a:hover
 {
 	background-color: #0e001f;
 	border-radius: 0px 0px 30px 30px;
+}
+
+/* ----------------------------------------------------------------------- */
+
+.projectPreview
+{
+	padding-top: 25px;
+	margin-bottom: 5px;
+
+	position: relative;
+	/* width: 100%; */
+	/* margin: auto; */
+	display: flex;
+	align-items: center;
+}
+
+.previousImage,
+.nextImage
+{
+	/* height: 50%; */
+	padding-top: 10%;
+	padding-bottom: 10%;
+	/* width: 7%; */
+	cursor: pointer;
+    color: rgba(220, 220, 220, 0.8);
+    background-color: rgba(0, 0, 0, 0.8);
+    position: absolute;
+	opacity: 0.8;
+	/* align-items: center; */
+    /* transition: opacity 0.3s ease; */
+    /* opacity: 0.5; */
+
+    font-size: 25px;
+	/* line-height: 50%; */
+    /* padding: 10px; */
+	transition: .2s linear;
+	z-index: 2;
+}
+
+.previousImage
+{
+	left: 0;
+	padding-right: 1%;
+	border-radius: 0px 15px 15px 0px;
+}
+
+.nextImage
+{
+	right: 0;
+	padding-left: 1%;
+	border-radius: 15px 0px 0px 15px;
+
+}
+
+.previousImage:hover,
+.nextImage:hover
+{
+	padding-top: 11%;
+	padding-bottom: 11%;
+	opacity: 1;
+}
+.previousImage:hover
+{
+	padding-right: 2%;
+}
+.nextImage:hover
+{
+	padding-left: 2%;
+}
+
+.numberImage
+{
+	cursor: default;
+	user-select: none;
+	background-color: rgba(0, 0, 0, 0.8);
+    color: rgba(220, 220, 220, 0.8);
+	padding: 10px;
+	position: absolute;
+	top : 35px;
+	right : 10px;
+	border-radius: 15px;
+	z-index: 2;
+}
+
+/* .imageContainer
+{
+	position: relative;
+    height: 100%;
+}
+*/
+.newImage
+{
+	position: absolute;
+}
+.newImage {
+	opacity: 0;
+    z-index: 1;
+	width: 100%;
+	left: 0;
 }
