--- a/contact.css
+++ b/contact.css
@@ -46,21 +46,37 @@ main
 
 .contactButton
 {
-    background-color:  #7a54b9;
-    color: white;
+    background-color: aqua;
+    margin: 3%;
+    /* padding: 2%; */
 
+    display: inline-block;
+
+    background-color:  #7a54b9;
     border: solid 2px #ffffff;
     border-radius: 30px;
-    margin: 3%;
-    padding: 2%;
+
+
+    transition: .2s linear;
+    
     font-size: 20px;
     font-weight: 600;
-    
-    transition: .2s linear;
 }
 
 .contactButton:hover
 {
     background-color:  #9b70e0;
     transform: scale(1.1);
+    font-weight: 600;
+
+}
+
+.contactButton a
+{
+    /* background-color: red; */
+    color: white;
+
+    display: block;
+    padding: 10px;
+    border-radius: inherit;
 }
